fix: give home page navbar and mobile dropdown a proper background
Transparent + white text was invisible in light mode.

--- a/src/components/navbar/menu/menu.scss
+++ b/src/components/navbar/menu/menu.scss
@@ -145,6 +145,6 @@
 }
 
 body.home .menu-container.active {
-  background-color: transparent;
-  color: #fff;
+  background-color: var(--color-navbar);
+  color: var(--color-content);
 }
