--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -63,8 +63,6 @@ body .navbar-container {
 }
 
 body.home .navbar-container {
-  background-color: transparent;
-  color: #fff;
-  margin: 0 auto;
-  padding: unset;
+  background-color: var(--color-navbar);
+  color: var(--color-content);
 }
